Adding a form to pair pivotal projects with harvest projects. Not saving yet.

--- a/options.css
+++ b/options.css
@@ -1,5 +1,15 @@
-#form {
+table td, table th {
+  min-width: 250px;
+  padding-left: 20px; }
+table th {
+  text-align: left; }
+
+body {
   font-family: helvetica; }
+
+#form {
+  width: 250px;
+  position: relative; }
   #form label {
     width: 100px;
     display: inline-block; }
@@ -10,3 +20,9 @@
     padding: 5px; }
   #form .error {
     color: red; }
+
+#projects {
+  padding-left: 30px;
+  margin-top: 0; }
+  #projects .code {
+    font-size: smaller; }
